--- a/index.html
+++ b/index.html
@@ -18,26 +18,14 @@
             <div class="main_content">
                 <!--about user-->
                 <div class="about">
-                    <h2 class="about_position">English teacher</h2>
+                    <h2 class="about_position">Waitress</h2>
                     <h1 class="about_name">Nazina Maryna</h1>
-                    <p class="about_discribtion">My name is Maryna. I am willing to do everything I can to help kids master the English language in
-                    an interesting and exiting way.
-                    <br>I started my teaching career five years ago when I came to China to get acquainted with a new
-                    culture. At first, I worked in a special kindergarten with advanced course of Maths as an English teacher. Then I became a
-                    teacher in "Golf International Kindergarten". I got a plenty of inspiration communicating with coaches and exchanging
-                    the necessary skills with other teachers. We had a lot of different outdoor activities with kids. To tell the truth,
-                    most of all, I love art and I see a lot of things in an artistic way. It let me work full time in Art Kindergarten for
-                    one year. I took opportunity of my visual art abilities.
-                    <br> In 2019, I got a part-time morning job in a kindergarten. Also, I had a full-time job in the Shutoon Training Center as
-                    an English teacher. Moreover, I worked in a primary school a few days per week. In my opinion, learning new skills and
-                    techniques has an important part to achieve my professional goals.
-                    <br> In 2020, I went to Vietnam, where I completed my course of Teaching English as a Foreign language. That year, I started
-                    to work online on the platform "Tutor online". 
-                    <br> After some time I returned to Ukraine. In 2021 I received job in a privet
-                    kindergarten "Shkola Radosti" also I continued working as a tutor.
-                    <br>In order to get teaching experience in Ireland I am looking forward to obtaining a part-time job in a kindergarten or
-                    training centre.
-                    </p>
+                    <p class="about_discribtion">Good day to you, Athlone! 
+                        <br>My name is Maryna. Currently, I am living in Athlone city. I am going to stay here during 6 or
+                    8 months. Let me tell you a few words about myself. I like doing photography and getting acquainted with a new culture
+                    of different countries, communicate with interesting people. Likewise, I am learning how to get things together and
+                    become more organized. I am studying for web-developer in Academy of Ukraine and hope to have a nice future as an engineer.
+                        <br>I would love to cooperate with you on a making new bright day!
                 </div>
                 <!--Projects-->
                 <!-- <div class="projects">
@@ -71,17 +59,17 @@
                 <div class="work">
                 <h3 class="title">Work Expirience</h3>
                     <div>
-                        <h4 class="work_position">English Teacher <span class="organization"> Chinese Kindergarten</span></h4>
-                        <p class="period">2017-2019 <span class="line">|</span> Guangzhou, China</p>
-                        <ul class="work_list">
+                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
+                        <!-- <ul class="work_list">
                             <li class="work_list_item">Math Kindergarten</li>
                             <li class="work_list_item">Golf Internetional Kindergarten</li>
                             <li class="work_list_item">Art Chinese Kindergarten</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div>
-                        <h4 class="work_position">English Tutor <span class="organization">Shutoon Training Center</span></h4>
-                        <p class="period">2019-2020 <span class="line">|</span> Guangzhou, China </p>
+                        <h4 class="work_position">Administrator in dolphinarium restaurant <span class="organization">Nemo</span></h4>
+                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkov</p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item">Text</li>
                             <li class="work_list_item">Text</li>
@@ -94,15 +82,6 @@
                         <!-- <ul class="work_list">
                             <li class="work_list_item">Online teaching English</li>
                         </ul> -->
-                    </div>
-                    <div>
-                        <h4 class="work_position">English Teacher <span class="organization">"Школа Радости" Елены Чернявской</span></h4>
-                        <p class="period">2021 and currently <span class="line">|</span> Kharkov </p>
-                        <ul class="work_list">
-                            <!-- <li class="work_list_item"></li>
-                            <li class="work_list_item">Text</li>
-                            <li class="work_list_item">Text</li> -->
-                        </ul>
                     </div>
                 </div>
                  <!--Edication-->
@@ -125,12 +104,17 @@
                         <h4 class="education_facultry">Teaching English as a Foreign Language</h4>
                         <p class="period">2019 <span class="line">|</span> England London</p>
                     </li>
+                    <li>
+                        <h4 class="education">GoIT Acadamy</h4>
+                        <h4 class="education_facultry">Full Stack Software Developer</h4>
+                        <p class="period">2022 <span class="line">|</span> Ukraine Kiev</p>
+                    </li>
                 </ul>
                 </div>
             </div>
             <!--Slidebar-->
             <aslide class="slidebar">
-                <img src="ED7A1499.jpg" alt="user photo" class="photo">
+                <img src="ED7A6734.jpg" alt="user photo" class="photo">
             <!--Contacts-->
             <div class="contacts">
                 <h3 class="sidebar_title">Contacts</h3>
@@ -147,7 +131,7 @@
                 </p> -->
                 <p>
                     <span class="contact_type">In:</span>
-                    <a href="https://www.linkedin.com/in/maryna-nazina/" class="contact_link">linkedin</a>
+                    <a href="https://www.linkedin.com/in/nazinamari/" class="contact_link">linkedin</a>
                 </p>
                 </div>
             </div>
@@ -155,9 +139,9 @@
             <div class="tech_skills">
                 <h3 class="sidebar_title">Professional Skills</h3>
                 <ul class="tech_skills_list">
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Five years experience of working with little children</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Lessons are aimed at conversational fluency, mastering practical skills in all aspects of the language</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Priority is given to communication, interaction and personal aspects</span></li>
+                    <li class="tech_skills_icon"><span class="tech_skills_text">Excellent Work Ethic</span></li>
+                    <li class="tech_skills_icon"><span class="tech_skills_text">Ability to manage time properly</span></li>
+                    <li class="tech_skills_icon"><span class="tech_skills_text">Accuracy in recording orders</span></li>
                     <!-- <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
                     <li class="tech_skills_icon"><span class="tech_skills_text">CaptureOne</span></li>
                     <li class="tech_skills_icon"><span class="tech_skills_text">Trello</span></li>
@@ -170,9 +154,8 @@
             <ul class="soft_skills_list">
                 <li class="soft_skills_icon"><span class="soft_skills_text">Good communicational skill</span></li>
                 <li class="soft_skills_icon"><span class="soft_skills_text">High level of energy</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Positive attitude</span></li>
                 <li class="soft_skills_icon"><span class="soft_skills_text">Active and Creative</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Well organised</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Friendly and Outgoing Attitude</span></li>
             </ul>
             </div>
             <div class="soft_skills">
