--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
                 <div class="about">
                     <h2 class="about_position">Waitress</h2>
                     <h1 class="about_name">Nazina Maryna</h1>
-                    <p class="about_discribtion">Good day to you, Athlone! 
-                        <br>My name is Maryna. Currently, I am living in Athlone city. I am going to stay here during 6 or
-                    8 months. Let me tell you a few words about myself. I like doing photography and getting acquainted with a new culture
-                    of different countries, communicate with interesting people. Likewise, I am learning how to get things together and
-                    become more organized. I am studying for web-developer in Academy of Ukraine and hope to have a nice future as an engineer.
-                        <br>I would love to cooperate with you on a making new bright day!
+                    <p class="about_discribtion">My name is Maryna. Currently, I am living in Athlone. Before coming to Ireland I was teacher of English in kindergarten in Ukraine. I have interest in photography and programming. I want to become a front-end developer. I am studying in Academy of Ukraine. I look forward to meeting you 
                 </div>
                 <!--Projects-->
                 <!-- <div class="projects">
