--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
             <div class="main_content">
                 <!--about user-->
                 <div class="about">
-                    <h2 class="about_position">Waitress</h2>
+                    <h2 class="about_position">Jobseeker</h2>
                     <h1 class="about_name">Nazina Maryna</h1>
-                    <p class="about_discribtion">My name is Maryna. Currently, I am living in Athlone. Before coming to Ireland I was teacher of English in kindergarten in Ukraine. I have interest in photography and programming. I want to become a front-end developer. I am studying in Academy of Ukraine. I look forward to meeting you 
+                    <p class="about_discribtion"><span class="pa">My name is Maryna. I am 35 years old. I live in Athlone. Diligent worker and an open-mind woman. Before coming to Ireland, I was a teacher of English in the kindergarten in
+                    Ukraine.</span> 
+                    <br><span class="pa">My hobbies are photography, doing sports and computer programming. I want to become a front-end developer in the future.
+                    Therefore, I am studying coding in Academy of Ukraine online. I like organizing materials and working in a good team.</span>
+                    <br><span class="pa">I look forward to obtaining a part-time or full time job. I would be happy to meet and discuss this exiting position.</span>
                 </div>
                 <!--Projects-->
                 <!-- <div class="projects">
@@ -54,7 +58,47 @@
                 <div class="work">
                 <h3 class="title">Work Expirience</h3>
                     <div>
-                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <h4 class="work_position">English Teacher <span class="organization">"Школа Радости" Елены Чернявской</span></h4>
+                        <p class="period">2021-2022 <span class="line">|</span> Kharkov </p>
+                        <ul class="work_list">
+                            <!-- <li class="work_list_item"></li>
+                                                                    <li class="work_list_item">Text</li>
+                                                                    <li class="work_list_item">Text</li> -->
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
+                        <p class="period">2009 and currently <span class="line">|</span> Kharkov </p>
+                        <ul class="work_list">
+                            <!-- <li class="work_list_item"></li>
+                                                                    <li class="work_list_item">Text</li>
+                                                                    <li class="work_list_item">Text</li> -->
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="work_position">English Tutor <span class="organization">TutorOnLine</span></h4>
+                        <p class="period">2020-2022 <span class="line">|</span> Moscow</p>
+                    </div>
+                    <div>
+                        <h4 class="work_position">English Tutor <span class="organization">Shutoon Training Center</span></h4>
+                        <p class="period">2019-2020 <span class="line">|</span> Guangzhou, China </p>
+                        <ul class="work_list">
+                            <!-- <li class="work_list_item">Text</li>
+                                                <li class="work_list_item">Text</li>
+                                                <li class="work_list_item">Text</li> -->
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="work_position">English Teacher <span class="organization"> Chinese Kindergarten</span></h4>
+                        <p class="period">2017-2019 <span class="line">|</span> Guangzhou, China</p>
+                        <ul class="work_list">
+                            <li class="work_list_item">Math Kindergarten</li>
+                            <li class="work_list_item">Golf Internetional Kindergarten</li>
+                            <li class="work_list_item">Art Chinese Kindergarten</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4 class="work_position">Administrator and waitress in restaurant <span class="organization"> Taksim</span></h4>
                         <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
                         <!-- <ul class="work_list">
                             <li class="work_list_item">Math Kindergarten</li>
@@ -71,13 +115,6 @@
                             <li class="work_list_item">Text</li> -->
                         </ul>
                     </div>
-                    <div>
-                        <h4 class="work_position">English Tutor <span class="organization">TutorOnLine</span></h4>
-                        <p class="period">2020 and currently <span class="line">|</span> Moscow</p>
-                        <!-- <ul class="work_list">
-                            <li class="work_list_item">Online teaching English</li>
-                        </ul> -->
-                    </div>
                 </div>
                  <!--Edication-->
                  <div class="education"> 
@@ -86,12 +123,11 @@
                 <ul>
                     <li>
                         <h4 class="education">Specialized English School № 162</h4>
-                        <h4 class="education_facultry">Student</h4>
                         <p class="period">2004-1994 <span class="line">|</span> Ukraine Kharkov</p>
                     </li>
                     <li>
                         <h4 class="education">Academy of the President of Ukraine</h4>
-                        <h4 class="education_facultry">Managment</h4>
+                        <h4 class="education_facultry">Managment in a public institution</h4>
                         <p class="period">2004-2009 <span class="line">|</span> Ukraine Kharkov</p>
                     </li>
                     <li>
@@ -102,7 +138,7 @@
                     <li>
                         <h4 class="education">GoIT Acadamy</h4>
                         <h4 class="education_facultry">Full Stack Software Developer</h4>
-                        <p class="period">2022 <span class="line">|</span> Ukraine Kiev</p>
+                        <p class="period">2022-currently <span class="line">|</span> Ukraine Kiev</p>
                     </li>
                 </ul>
                 </div>
@@ -127,16 +163,20 @@
                 <p>
                     <span class="contact_type">In:</span>
                     <a href="https://www.linkedin.com/in/nazinamari/" class="contact_link">linkedin</a>
+                    <p class="lin">www.linkedin.com/in/nazinamari</p>
                 </p>
                 </div>
             </div>
             <!--Tech Skils-->
             <div class="tech_skills">
-                <h3 class="sidebar_title">Professional Skills</h3>
+                <h3 class="sidebar_title">Skills</h3>
                 <ul class="tech_skills_list">
                     <li class="tech_skills_icon"><span class="tech_skills_text">Excellent Work Ethic</span></li>
                     <li class="tech_skills_icon"><span class="tech_skills_text">Ability to manage time properly</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Accuracy in recording orders</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Good communicational skill</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">High level of energy</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Active and Creative</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Friendly and Outgoing Attitude</span></li>
                     <!-- <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
                     <li class="tech_skills_icon"><span class="tech_skills_text">CaptureOne</span></li>
                     <li class="tech_skills_icon"><span class="tech_skills_text">Trello</span></li>
@@ -145,21 +185,23 @@
             </div>
             <!--Soft Skills-->
             <div class="soft_skills">
-                <h3 class="sidebar_title">Soft Skills</h3>
+                <h3 class="sidebar_title">Interests</h3>
             <ul class="soft_skills_list">
-                <li class="soft_skills_icon"><span class="soft_skills_text">Good communicational skill</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">High level of energy</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Active and Creative</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Friendly and Outgoing Attitude</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Discovering new cultures</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Photography</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Sports</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Learining new Languages</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Reading and writing</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Playing the piano</span></li>
             </ul>
             </div>
             <div class="soft_skills">
-                <h3 class="sidebar_title">Language Skill</h3>
+                <h3 class="sidebar_title">Languages</h3>
                 <ul class="soft_skills_list">
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Ukranian - Native</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">English - Upper-Intermediate</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Elementary</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Ukranian - Native</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
                 </ul>
             </div>
             </aslide>
