--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                 <div class="about">
                     <h2 class="about_position">Jobseeker</h2>
                     <h1 class="about_name">Nazina Maryna</h1>
-                    <p class="about_discribtion"><span class="pa">My name is Maryna. I am 35 years old. I live in Athlone. Diligent worker and an open-mind woman. Before coming to Ireland, I was a teacher of English in the kindergarten in
-                    Ukraine.</span> 
-                    <br><span class="pa">My hobbies are photography, doing sports and computer programming. I want to become a front-end developer in the future.
-                    Therefore, I am studying coding in Academy of Ukraine online. I like organizing materials and working in a good team.</span>
-                    <br><span class="pa">I look forward to obtaining a part-time or full time job. I would be happy to meet and discuss this exiting position.</span>
+                    <p class="about_discribtion"><span class="pa">Please allow me to introduce myself. My name is Marina. I live in Athlone. </span>
+                        I am enquiring if you have any vacancies for the stuff. Before coming to Ireland, I was a teacher of English in the kindergarten. 
+                        I also hold a certificate for teaching English as a foreign language.
+                        I would like to gain the further experience of restaurant to improve my English.
+                    
+                    <br><span class="pa">I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and after some period in China as well. I am diligent and friendly person who understands the meaning of hard work. My hobbies are photography, doing sports and web development. I like working in a good team. I get on well with the public and colleagues.</span>
+                    <br><span class="pa">I want to obtain a full time job. I look forward to hearing from you.</span>
                 </div>
                 <!--Projects-->
                 <!-- <div class="projects">
@@ -145,14 +147,14 @@
             </div>
             <!--Slidebar-->
             <aslide class="slidebar">
-                <img src="ED7A6734.jpg" alt="user photo" class="photo">
+                <img src="ED7A9005-sm.jpg" alt="user photo" class="photo">
             <!--Contacts-->
             <div class="contacts">
                 <h3 class="sidebar_title">Contacts</h3>
                 <div>
                 <p>
                     <span class="contact_type">C:</span>
-                    <a href="tel:+353857346116" class="contact_link">0857346116</a></p>
+                    <a href="tel: 0851555005" class="contact_link">0857346116</a></p>
                 <p> 
                     <span class="contact_type">E:</span>
                     <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a></p>
