--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div> -->
                 <!-- work -->
                 <div class="work">
-                <h3 class="title">Work Expirience</h3>
+                <h3 class="title">Work Experience</h3>
                     <div>
                         <h4 class="work_position">English Teacher <span class="organization">"Школа Радости" Елены Чернявской</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkov </p>
@@ -154,7 +154,7 @@
                 <div>
                 <p>
                     <span class="contact_type">C:</span>
-                    <a href="tel: 0851555005" class="contact_link">0857346116</a></p>
+                    <a href="tel:+353851555005" class="contact_link">0851555005</a></p>
                 <p> 
                     <span class="contact_type">E:</span>
                     <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a></p>
