--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="main_content">
                 <!--about user-->
                 <div class="about">
-                    <h2 class="about_position">Jobseeker</h2>
-                    <h1 class="about_name">Nazina Maryna</h1>
+                    <h2 class="about_position">Waitress</h2>
+                    <h1 class="about_name">Nazina Marina</h1>
                     <p class="about_discribtion"><span class="pa">Please allow me to introduce myself. My name is Marina. I live in Athlone. </span>
                         I am enquiring if you have any vacancies for the stuff. Before coming to Ireland, I was a teacher of English in the kindergarten. 
                         I also hold a certificate for teaching English as a foreign language.
@@ -95,12 +95,12 @@
                         <p class="period">2017-2019 <span class="line">|</span> Guangzhou, China</p>
                         <ul class="work_list">
                             <li class="work_list_item">Math Kindergarten</li>
-                            <li class="work_list_item">Golf Internetional Kindergarten</li>
+                            <li class="work_list_item">Golf International Kindergarten</li>
                             <li class="work_list_item">Art Chinese Kindergarten</li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="work_position">Administrator and waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
                         <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
                         <!-- <ul class="work_list">
                             <li class="work_list_item">Math Kindergarten</li>
@@ -109,7 +109,7 @@
                         </ul> -->
                     </div>
                     <div>
-                        <h4 class="work_position">Administrator in dolphinarium restaurant <span class="organization">Nemo</span></h4>
+                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
                         <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkov</p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item">Text</li>
@@ -118,10 +118,10 @@
                         </ul>
                     </div>
                 </div>
-                 <!--Edication-->
+                 <!--Education-->
                  <div class="education"> 
                 <h3 class="title">Education</h3>
-                <!--Universaty  #1-->
+                <!--University  #1-->
                 <ul>
                     <li>
                         <h4 class="education">Specialized English School № 162</h4>
@@ -129,16 +129,16 @@
                     </li>
                     <li>
                         <h4 class="education">Academy of the President of Ukraine</h4>
-                        <h4 class="education_facultry">Managment in a public institution</h4>
+                        <h4 class="education_facultry">Management in a public institution</h4>
                         <p class="period">2004-2009 <span class="line">|</span> Ukraine Kharkov</p>
                     </li>
                     <li>
-                        <h4 class="education">London Teacher Teaching Collage </h4>
+                        <h4 class="education">London Teacher Teaching College </h4>
                         <h4 class="education_facultry">Teaching English as a Foreign Language</h4>
                         <p class="period">2019 <span class="line">|</span> England London</p>
                     </li>
                     <li>
-                        <h4 class="education">GoIT Acadamy</h4>
+                        <h4 class="education">GoIT Academy</h4>
                         <h4 class="education_facultry">Full Stack Software Developer</h4>
                         <p class="period">2022-currently <span class="line">|</span> Ukraine Kiev</p>
                     </li>
@@ -157,7 +157,7 @@
                     <a href="tel:+353851555005" class="contact_link">0851555005</a></p>
                 <p> 
                     <span class="contact_type">E:</span>
-                    <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a></p>
+                    <a href="mailto:nazinamarina@meta.ua" class="contact_link">nazinamarina@meta.ua</a></p>
                 <!-- <p>
                     <span class="contact_type">Gh:</span>
                     <a href="https://github.com/nazinamari" class="contact_link">GitHub</a>
@@ -192,16 +192,16 @@
                 <li class="soft_skills_icon"><span class="soft_skills_text">Discovering new cultures</span></li>
                 <li class="soft_skills_icon"><span class="soft_skills_text">Photography</span></li>
                 <li class="soft_skills_icon"><span class="soft_skills_text">Sports</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Learining new Languages</span></li>
+                <li class="soft_skills_icon"><span class="soft_skills_text">Learning new Languages</span></li>
                 <li class="soft_skills_icon"><span class="soft_skills_text">Reading and writing</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Playing the piano</span></li>
+                <!-- <li class="soft_skills_icon"><span class="soft_skills_text">Playing the piano</span></li> -->
             </ul>
             </div>
             <div class="soft_skills">
                 <h3 class="sidebar_title">Languages</h3>
                 <ul class="soft_skills_list">
                     <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Ukranian - Native</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Ukrainian - Native</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">English - Upper-Intermediate</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Elementary</span></li>
                 </ul>
