--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                 <ul class="soft_skills_list">
                     <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Ukrainian - Native</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">English - Upper-Intermediate</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Elementary</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">English - Intermediate</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Beginner</span></li>
                 </ul>
             </div>
             </aslide>
