--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
                     <h2 class="about_position">Waitress</h2>
                     <h1 class="about_name">Nazina Marina</h1>
                     <p class="about_discribtion"><span class="pa">Please allow me to introduce myself. My name is Marina. I live in Athlone. </span>
-                        I am enquiring if you have any vacancies for the stuff. Before coming to Ireland, I was a teacher of English in the kindergarten. 
+                        I am enquiring if you have any vacancies for staff. Before coming to Ireland, I was a teacher of English in the kindergarten. 
                         I also hold a certificate for teaching English as a foreign language.
-                        I would like to gain the further experience of restaurant to improve my English.
-                    
-                    <br><span class="pa">I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and after some period in China as well. I am diligent and friendly person who understands the meaning of hard work. My hobbies are photography, doing sports and web development. I like working in a good team. I get on well with the public and colleagues.</span>
+                    <br><span class="pa">I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and for a period in China as well. I am a diligent and friendly person with excellent customer service skills. My hobbies are photography, doing sports and web development. I enjoy working as a part of a team and also enjoy using my own initiative. I get on well with the public and colleagues.</span>
                     <br><span class="pa">I want to obtain a full time job. I look forward to hearing from you.</span>
                 </div>
                 <!--Projects-->
@@ -60,7 +58,7 @@
                 <div class="work">
                 <h3 class="title">Work Experience</h3>
                     <div>
-                        <h4 class="work_position">English Teacher <span class="organization">"Школа Радости" Елены Чернявской</span></h4>
+                        <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkov </p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item"></li>
@@ -79,7 +77,7 @@
                     </div>
                     <div>
                         <h4 class="work_position">English Tutor <span class="organization">TutorOnLine</span></h4>
-                        <p class="period">2020-2022 <span class="line">|</span> Moscow</p>
+                        <p class="period">2020-2022 <span class="line">|</span> Online</p>
                     </div>
                     <div>
                         <h4 class="work_position">English Tutor <span class="organization">Shutoon Training Center</span></h4>
@@ -124,7 +122,7 @@
                 <!--University  #1-->
                 <ul>
                     <li>
-                        <h4 class="education">Specialized English School № 162</h4>
+                        <h4 class="education">Specialised English School № 162</h4>
                         <p class="period">2004-1994 <span class="line">|</span> Ukraine Kharkov</p>
                     </li>
                     <li>
