--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3 class="title">Work Experience</h3>
                     <div>
                         <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
-                        <p class="period">2021-2022 <span class="line">|</span> Kharkov </p>
+                        <p class="period">2021-2022 <span class="line">|</span> Kharkiv </p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item"></li>
                                                                     <li class="work_list_item">Text</li>
@@ -68,7 +68,7 @@
                     </div>
                     <div>
                         <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
-                        <p class="period">2009 and currently <span class="line">|</span> Kharkov </p>
+                        <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item"></li>
                                                                     <li class="work_list_item">Text</li>
@@ -108,7 +108,7 @@
                     </div>
                     <div>
                         <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
-                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkov</p>
+                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
                         <ul class="work_list">
                             <!-- <li class="work_list_item">Text</li>
                             <li class="work_list_item">Text</li>
@@ -116,19 +116,19 @@
                         </ul>
                     </div>
                 </div>
-                 <!--Education-->
-                 <div class="education"> 
+                <!--Education-->
+                <div class="education"> 
                 <h3 class="title">Education</h3>
                 <!--University  #1-->
                 <ul>
                     <li>
                         <h4 class="education">Specialised English School № 162</h4>
-                        <p class="period">2004-1994 <span class="line">|</span> Ukraine Kharkov</p>
+                        <p class="period">2004-1994 <span class="line">|</span> Ukraine Kharkiv</p>
                     </li>
                     <li>
                         <h4 class="education">Academy of the President of Ukraine</h4>
                         <h4 class="education_facultry">Management in a public institution</h4>
-                        <p class="period">2004-2009 <span class="line">|</span> Ukraine Kharkov</p>
+                        <p class="period">2004-2009 <span class="line">|</span> Ukraine Kharkiv</p>
                     </li>
                     <li>
                         <h4 class="education">London Teacher Teaching College </h4>
@@ -198,8 +198,8 @@
             <div class="soft_skills">
                 <h3 class="sidebar_title">Languages</h3>
                 <ul class="soft_skills_list">
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Ukrainian - Native</span></li>
+                    <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">English - Intermediate</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Beginner</span></li>
                 </ul>
