--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <a href="tel:+353851555005" class="contact_link">0851555005</a></p>
                 <p> 
                     <span class="contact_type">E:</span>
-                    <a href="mailto:nazinamarina@meta.ua" class="contact_link">nazinamarina@meta.ua</a></p>
+                    <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a></p>
                 <!-- <p>
                     <span class="contact_type">Gh:</span>
                     <a href="https://github.com/nazinamari" class="contact_link">GitHub</a>
