--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
             <div class="main_content">
                 <!--about user-->
                 <div class="about">
-                    <h2 class="about_position">Waitress</h2>
-                    <h1 class="about_name">Nazina Marina</h1>
-                    <p class="about_discribtion"><span class="pa">Please allow me to introduce myself. My name is Marina. I live in Athlone. </span>
-                        I am enquiring if you have any vacancies for staff. Before coming to Ireland, I was a teacher of English in the kindergarten. 
-                        I also hold a certificate for teaching English as a foreign language.
-                    <br><span class="pa">I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and for a period in China as well. I am a diligent and friendly person with excellent customer service skills. My hobbies are photography, doing sports and web development. I enjoy working as a part of a team and also enjoy using my own initiative. I get on well with the public and colleagues.</span>
-                    <br><span class="pa">I want to obtain a full time job. I look forward to hearing from you.</span>
+                    <!-- <h2 class="about_position">Waitress</h2> -->
+                    <h1 class="about_name">Maryna Nazina</h1>
+                    <p class="about_discribtion">
+                        <span class="pa">
+                            I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and for
+                    a period in China as well. I am a diligent and friendly person with excellent customer service skills. 
+                        </span>
+                    <br /><span class="pa"> 
+                        Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
+                        My hobbies are photography, doing sports and web development. I enjoy working as a part of a team and also enjoy using 
+                        my own initiative. I get on well with the public and colleagues.
+                        </span>
                 </div>
                 <!--Projects-->
                 <!-- <div class="projects">
@@ -58,6 +63,16 @@
                 <div class="work">
                 <h3 class="title">Work Experience</h3>
                     <div>
+                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
+                    </div>
+                    <div>
+                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
+                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
+                        <ul class="work_list">
+                        </ul>
+                    </div>
+                    <div>
                         <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkiv </p>
                         <ul class="work_list">
@@ -66,61 +81,50 @@
                                                                     <li class="work_list_item">Text</li> -->
                         </ul>
                     </div>
-                    <div>
-                        <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
-                        <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
-                        <ul class="work_list">
-                            <!-- <li class="work_list_item"></li>
-                                                                    <li class="work_list_item">Text</li>
-                                                                    <li class="work_list_item">Text</li> -->
-                        </ul>
-                    </div>
-                    <div>
+                    <!-- <div>
                         <h4 class="work_position">English Tutor <span class="organization">TutorOnLine</span></h4>
                         <p class="period">2020-2022 <span class="line">|</span> Online</p>
-                    </div>
-                    <div>
+                    </div> -->
+                    <!-- <div>
                         <h4 class="work_position">English Tutor <span class="organization">Shutoon Training Center</span></h4>
                         <p class="period">2019-2020 <span class="line">|</span> Guangzhou, China </p>
-                        <ul class="work_list">
-                            <!-- <li class="work_list_item">Text</li>
-                                                <li class="work_list_item">Text</li>
-                                                <li class="work_list_item">Text</li> -->
-                        </ul>
-                    </div>
+                    </div> -->
                     <div>
-                        <h4 class="work_position">English Teacher <span class="organization"> Chinese Kindergarten</span></h4>
+                        <h4 class="work_position">English Teacher <span class="organization"> Chinese Kindergarten and Training Center</span></h4>
                         <p class="period">2017-2019 <span class="line">|</span> Guangzhou, China</p>
                         <ul class="work_list">
                             <li class="work_list_item">Math Kindergarten</li>
                             <li class="work_list_item">Golf International Kindergarten</li>
                             <li class="work_list_item">Art Chinese Kindergarten</li>
+                            <li class="work_list_item">Shutoon Training Center</li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
-                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
-                        <!-- <ul class="work_list">
-                            <li class="work_list_item">Math Kindergarten</li>
-                            <li class="work_list_item">Golf Internetional Kindergarten</li>
-                            <li class="work_list_item">Art Chinese Kindergarten</li>
-                        </ul> -->
+                        <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
+                        <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
                     </div>
-                    <div>
-                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
-                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
-                        <ul class="work_list">
-                            <!-- <li class="work_list_item">Text</li>
-                            <li class="work_list_item">Text</li>
-                            <li class="work_list_item">Text</li> -->
-                        </ul>
-                    </div>
+                </div>
+
+                <div class="tech_skills skills">
+                    <h3 class="sidebar_title skills_title">Skills</h3>
+                    <ul class="tech_skills_list">
+                        <div class="wrapper-skills">
+                            <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
+                            <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skill</span></li>
+                        </div>
+                        <div class="wrapper-skills">
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Active and Creative</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Friendly and Outgoing Attitude</span></li>
+                        </div>
+                    </ul>
                 </div>
                 <!--Education-->
                 <div class="education"> 
                 <h3 class="title">Education</h3>
                 <!--University  #1-->
-                <ul>
+                <ul class="edu-class">
                     <li>
                         <h4 class="education">Specialised English School № 162</h4>
                         <p class="period">2004-1994 <span class="line">|</span> Ukraine Kharkiv</p>
@@ -148,7 +152,7 @@
                 <img src="ED7A9005-sm.jpg" alt="user photo" class="photo">
             <!--Contacts-->
             <div class="contacts">
-                <h3 class="sidebar_title">Contacts</h3>
+                <h3 class="sidebar_title contacts-contact">Contacts</h3>
                 <div>
                 <p>
                     <span class="contact_type">C:</span>
@@ -163,12 +167,12 @@
                 <p>
                     <span class="contact_type">In:</span>
                     <a href="https://www.linkedin.com/in/nazinamari/" class="contact_link">linkedin</a>
-                    <p class="lin">www.linkedin.com/in/nazinamari</p>
+                    <!-- <p class="lin">www.linkedin.com/in/nazinamari</p> -->
                 </p>
                 </div>
             </div>
             <!--Tech Skils-->
-            <div class="tech_skills">
+            <!-- <div class="tech_skills">
                 <h3 class="sidebar_title">Skills</h3>
                 <ul class="tech_skills_list">
                     <li class="tech_skills_icon"><span class="tech_skills_text">Excellent Work Ethic</span></li>
@@ -177,12 +181,8 @@
                     <li class="soft_skills_icon"><span class="soft_skills_text">High level of energy</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Active and Creative</span></li>
                     <li class="soft_skills_icon"><span class="soft_skills_text">Friendly and Outgoing Attitude</span></li>
-                    <!-- <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">CaptureOne</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Trello</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Figma</span></li> -->
                 </ul>
-            </div>
+            </div> -->
             <!--Soft Skills-->
             <div class="soft_skills">
                 <h3 class="sidebar_title">Interests</h3>
